trying to align about page correctly

--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,10 @@ footer p {
   font-weight: 600;
   font-style: oblique;
 }
+.container .description.about-content {
+  display: inline-flex;
+  width: 49.5%;
+}
 .container .description h2 {
   font-size: 2.5rem;
   font-weight: 600;
@@ -212,6 +216,18 @@ footer p {
 .container .description .info-card {
   display: flex;
   margin: 50px 0;
+}
+.container .description .info-card.team-card {
+  display: inline-flex;
+  width: 49.5%;
+}
+.container .description .info-card.team-card:nth-of-type(1) {
+  order: 1;
+  justify-self: flex-end;
+  background: purple;
+}
+.container .description .info-card.team-card::nth-of-type(2) {
+  order: 2;
 }
 .container .description .info-card .text-content {
   width: 50%;
