--- a/less/container.less
+++ b/less/container.less
@@ -16,6 +16,11 @@
     }
   }
   .description {
+      &.about-content{
+          display: inline-flex;
+          width: 49.5%; 
+          
+      }
     h2 {
       font-size: 2.5rem;
       font-weight: 600;
@@ -23,9 +28,26 @@
       margin: 20px 0;
       color: @madison;
     }
+    
     .info-card {
       display: flex;
       margin: 50px 0;
+      
+      &.team-card{
+        display: inline-flex;
+        
+        width: 49.5%;
+        &:nth-of-type(1){
+            order: 1;
+            
+            justify-self: flex-end;
+            background: purple;
+        }
+        &::nth-of-type(2){
+            order: 2;
+        }
+    } 
+      
       .text-content {
         width: 50%;
         margin: 0 auto;
